@@ -37,8 +37,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   use StringList;
   
   # Class Variables
-  our $NEW_SESSION_CBS : Hash of Net::SSLeay::Callback::NewSession;
-  
   our $REMOVE_SESSION_CBS : Hash of Net::SSLeay::Callback::RemoveSession;
   
   our $VERIFY_CBS : Hash of Net::SSLeay::Callback::Verify;
@@ -46,8 +44,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   our $MUTEX : Sync::Mutex;
   
   INIT {
-    $NEW_SESSION_CBS = Hash->new;
-    
     $REMOVE_SESSION_CBS = Hash->new;
     
     $VERIFY_CBS = Hash->new;
@@ -137,48 +133,9 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_tlsext_servername_callback : long ($cb : Net::SSLeay::Callback::TlsextServername, $arg : object = undef);
   
-  native method sess_set_new_cb : void ($cb : Net::SSLeay::Callback::NewSession);
-  
   native method sess_set_remove_cb : void ($cb : Net::SSLeay::Callback::NewSession);
   
   native method DESTROY : void ();
-  
-  private method GET_NEW_SESSION_CB : Net::SSLeay::Callback::NewSession ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->reader_unlock;
-    });
-    
-    $MUTEX->reader_lock;
-    
-    my $psk_server_cb = (Net::SSLeay::Callback::NewSession)$NEW_SESSION_CBS->get($key);
-    
-    return $psk_server_cb;
-  }
-  
-  private method SET_NEW_SESSION_CB : void ($key : string, $psk_server_cb : Net::SSLeay::Callback::NewSession) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    $NEW_SESSION_CBS->set($key, $psk_server_cb);
-  }
-  
-  private method DELETE_NEW_SESSION_CB : Net::SSLeay::Callback::NewSession ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    my $deleted = (Net::SSLeay::Callback::NewSession)$NEW_SESSION_CBS->delete($key);
-    
-    return $deleted;
-  }
   
   private method GET_REMOVE_SESSION_CB : Net::SSLeay::Callback::RemoveSession ($key : string) {
     
